--- a/src/app/topic/components/topic-vote-cast/topic-vote-cast.component.scss
+++ b/src/app/topic/components/topic-vote-cast/topic-vote-cast.component.scss
@@ -6,6 +6,61 @@
   }
 }
 
+.vote_header {
+  display: flex;
+  flex-direction: column;
+  padding: 24px;
+  gap: 16px;
+  border-radius: 16px 16px 0 0;
+  background-color: var(--color-dialog-voting-contrast);
+  align-items: initial;
+  @include mixins.mobile {
+    padding: 16px;
+  }
+
+  .header_section {
+    display: flex;
+    justify-content: space-between;
+
+    .question {
+      font-size: 24px;
+      font-style: normal;
+      font-weight: 600;
+      line-height: 32px;
+    }
+  }
+  .data_section {
+    display: flex;
+    gap: 56px;
+
+    @include mixins.mobile {
+      flex-direction: column;
+      gap: 16px;
+    }
+
+    .data_cell {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+
+      .title {
+        font-size: 12px;
+        font-weight: 400;
+        line-height: 16px;
+      }
+      .data_item {
+      }
+
+      .info_text {
+        font-size: 14px;
+        font-style: normal;
+        font-weight: 600;
+        line-height: 16px; /* 114.286% */
+      }
+    }
+  }
+}
+
 .option {
   gap: 8px;
 }
@@ -110,8 +165,9 @@
   }
 
   .vote_result_info {
-
+    padding: 0;
     @include mixins.mobile {
+      padding: 0;
       align-items: flex-start;
     }
 
